--- a/api/.htaccess
+++ b/api/.htaccess
@@ -1,5 +1,5 @@
 RewriteEngine On
 RewriteCond %{Request_Filename} !-F
 RewriteCond %{Request_Filename} !-d
-RewriteRule ^ YvF4es186N.php [QSA,L]
+RewriteRule ^ api.php [QSA,L]
 Options All -Indexes
